Stream network loading (#905)
Implements a stream based input reader.

This changes URL & file inputs from buffering the whole content into a
string before starting to parse, into a stream based read.

Memory consumption when loading large pages from the network or a file is substantially reduced.